# git-clean-history

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
git_clean_history/: __init__.py  __main__.py  patterns.py  scanner.py
git_clean_history/patterns/: __init__.py  aws.py  azure.py  cloud_ai.py  crypto.py  digitalocean.py  firebase.py  generic.py  github.py  gitlab.py  google.py  hashicorp.py  jwt.py  messaging.py  package_registries.py  payments.py  platforms.py  slack.py  stripe.py
tests/: test_patterns.py
