[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-clean-history"
version = "0.2.0"
description = "Scan git repos for secrets in history and clean them out"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["click>=8.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
git-clean-history = "git_clean_history.__main__:cli"

[project.urls]
Homepage = "https://github.com/RedBeret/git-clean-history"
Issues = "https://github.com/RedBeret/git-clean-history/issues"

[tool.setuptools.packages.find]
include = ["git_clean_history*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
